<resources>
    <string name="app_name">Facebook-iso</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="finish_reg">Finish</string>
    <!--    <string name="BaseUrl">http://10.0.2.2:3000/</string>-->
    <string name="BaseUrl">https://fb-createex.azurewebsites.net/</string>
</resources>